add_xlockmore_screensaver(antinspect WIN32 antinspect.c glsphere.c wgl.c)
add_xlockmore_screensaver(antmaze WIN32 antmaze.c rotator.c glsphere.c tube.c wgl.c)
add_xlockmore_screensaver(antspotlight WIN32 antspotlight.c rotator.c texture.c glsphere.c wgl.c)
add_xlockmore_screensaver(atlantis WIN32 atlantis.c swim.c dolphin.c shark.c whale.c wgl.c)
add_xlockmore_screensaver(atunnel WIN32 atunnel.c tunnel_draw.c wgl.c)
add_xlockmore_screensaver(blinkbox WIN32 blinkbox.c glsphere.c wgl.c)
add_xlockmore_screensaver(blocktube WIN32 blocktube.c wgl.c)
add_xlockmore_screensaver(boing WIN32 boing.c wgl.c)
add_xlockmore_screensaver(bouncingcow WIN32 bouncingcow.c rotator.c gllist.c 
    cow_face.c
    cow_hide.c
    cow_hoofs.c
    cow_horns.c
    cow_tail.c
    cow_udder.c
    wgl.c)
add_xlockmore_screensaver(boxed WIN32 boxed.c wgl.c)
add_xlockmore_screensaver(bubble3d WIN32 bubble3d.c b_draw.c b_lockglue.c b_sphere.c wgl.c)
add_xlockmore_screensaver(cage WIN32 cage.c wgl.c)
add_xlockmore_screensaver(carousel WIN32 carousel.c rotator.c texture.c texfont.c wgl.c)
add_xlockmore_screensaver(circuit WIN32 circuit.c wgl.c)
add_xlockmore_screensaver(companion WIN32
    companion.c 
    companion_disc.c 
    companion_heart.c 
    companion_quad.c 
    gllist.c 
    rotator.c
    wgl.c)
add_xlockmore_screensaver(crackberg WIN32 crackberg.c wgl.c)
add_xlockmore_screensaver(cube21 WIN32 cube21.c wgl.c)
add_xlockmore_screensaver(cubenetic WIN32 cubenetic.c rotator.c wgl.c)
add_xlockmore_screensaver(cubestorm WIN32 cubestorm.c rotator.c wgl.c)
add_xlockmore_screensaver(cubicgrid WIN32 cubicgrid.c rotator.c wgl.c)
add_xlockmore_screensaver(cubicgridclock WIN32 cubicgridclock.c rotator.c glxfonts.c wgl.c)
add_xlockmore_screensaver(dangerball WIN32 dangerball.c rotator.c glsphere.c tube.c wgl.c)
add_xlockmore_screensaver(dnalogo WIN32 dnalogo.c normals.c tube.c wgl.c)
add_xlockmore_screensaver(endgame WIN32 endgame.c chessmodels.c wgl.c)
add_xlockmore_screensaver(engine WIN32 engine.c rotator.c glxfonts.c wgl.c)
add_xlockmore_screensaver(extrusion WIN32 extrusion.c rotator.c 
    extrusion-helix2.c
    extrusion-helix3.c
    extrusion-helix4.c
    extrusion-joinoffset.c
    extrusion-screw.c
    extrusion-taper.c
    extrusion-twistoid.c
    wgl.c)
add_xlockmore_screensaver(flipflop WIN32 flipflop.c texture.c wgl.c)
add_xlockmore_screensaver(flipscreen3d WIN32 flipscreen3d.c texture.c wgl.c)
add_xlockmore_screensaver(fliptext WIN32 fliptext.c texfont.c wgl.c)
add_xlockmore_screensaver(flurry WIN32 flurry.c 
    flurry-smoke.c 
    flurry-spark.c 
    flurry-star.c 
    flurry-texture.c 
    wgl.c)
add_xlockmore_screensaver(flyingtoasters WIN32 
    flyingtoasters.c 
    toaster.c 
    
    toaster_base.c 
    toast.c 
    toast2.c 
    toaster_handle.c 
    toaster_handle2.c 
    toaster_jet.c 
    toaster_knob.c 
    toaster_slots.c 
    toaster_wing.c
    gllist.c
    wgl.c)
add_xlockmore_screensaver(gears WIN32 gears.c rotator.c involute.c tube.c normals.c wgl.c)
add_xlockmore_screensaver(gflux WIN32 gflux.c texture.c wgl.c)
add_xlockmore_screensaver(glblur WIN32 glblur.c rotator.c wgl.c)
add_xlockmore_screensaver(glcells WIN32 glcells.c wgl.c)
add_xlockmore_screensaver(gleidescope WIN32 gleidescope.c texture.c wgl.c)
add_xlockmore_screensaver(glforestfire WIN32 glforestfire.c wgl.c)
add_xlockmore_screensaver(glhanoi WIN32 glhanoi.c rotator.c wgl.c)
add_xlockmore_screensaver(glknots WIN32 glknots.c rotator.c tube.c wgl.c)
add_xlockmore_screensaver(glmatrix WIN32 glmatrix.c wgl.c)
add_xlockmore_screensaver(glplanet WIN32 glplanet.c rotator.c glsphere.c wgl.c)
add_xlockmore_screensaver(glschool WIN32 glschool.c glschool_alg.c glschool_gl.c glsphere.c tube.c wgl.c)
add_xlockmore_screensaver(glslideshow WIN32 glslideshow.c texture.c glxfonts.c wgl.c)
add_xlockmore_screensaver(glsnake WIN32 glsnake.c glxfonts.c wgl.c)
add_xlockmore_screensaver(gltext WIN32 gltext.c rotator.c tube.c glsphere.c glut_swidth.c wgl.c)
add_xlockmore_screensaver(hilbert WIN32 hilbert.c rotator.c glsphere.c tube.c wgl.c)
add_xlockmore_screensaver(hypertorus WIN32 hypertorus.c wgl.c)
add_xlockmore_screensaver(hypnowheel WIN32 hypnowheel.c rotator.c wgl.c)
add_xlockmore_screensaver(jigglypuff WIN32 jigglypuff.c wgl.c)
add_xlockmore_screensaver(jigsaw WIN32 jigsaw.c rotator.c texture.c texfont.c normals.c wgl.c)
add_xlockmore_screensaver(juggler3d WIN32 juggler3d.c rotator.c tube.c glsphere.c glxfonts.c wgl.c)
add_xlockmore_screensaver(kaleidocycle WIN32 kaleidocycle.c rotator.c normals.c wgl.c)
add_xlockmore_screensaver(klein WIN32 klein.c wgl.c)
add_xlockmore_screensaver(lament WIN32 lament.c rotator.c normals.c wgl.c)
add_xlockmore_screensaver(lavalite WIN32 lavalite.c rotator.c marching.c normals.c wgl.c)
add_xlockmore_screensaver(lockward WIN32 lockward.c wgl.c)
add_xlockmore_screensaver(menger WIN32 menger.c rotator.c wgl.c)
add_xlockmore_screensaver(mirrorblob WIN32 mirrorblob.c texture.c wgl.c)
add_xlockmore_screensaver(moebius WIN32 moebius.c rotator.c glsphere.c tube.c wgl.c)
add_xlockmore_screensaver(moebiusgears WIN32 moebiusgears.c rotator.c involute.c normals.c wgl.c)
add_xlockmore_screensaver(molecule WIN32 molecule.c rotator.c texfont.c glxfonts.c glsphere.c tube.c wgl.c)
add_xlockmore_screensaver(morph3d WIN32 morph3d.c wgl.c)
add_xlockmore_screensaver(noof WIN32 noof.c wgl.c)
add_xlockmore_screensaver(photopile WIN32 photopile.c dropshadow.c texture.c texfont.c wgl.c)
add_xlockmore_screensaver(pinion WIN32 pinion.c glxfonts.c involute.c normals.c wgl.c)
add_xlockmore_screensaver(pipes WIN32 pipes.c pipeobjs.c buildlwo.c glsphere.c normals.c teapot.c wgl.c)
add_xlockmore_screensaver(polyhedra WIN32 polyhedra-gl.c polyhedra.c texfont.c glxfonts.c normals.c rotator.c teapot.c wgl.c)
add_xlockmore_screensaver(polytopes WIN32 polytopes.c wgl.c)
add_xlockmore_screensaver(providence WIN32 providence.c wgl.c)
add_xlockmore_screensaver(pulsar WIN32 pulsar.c wgl.c)
add_xlockmore_screensaver(quasicrystal WIN32 quasicrystal.c rotator.c wgl.c)
add_xlockmore_screensaver(queens WIN32 queens.c chessmodels.c wgl.c)
add_xlockmore_screensaver(rubik WIN32 rubik.c wgl.c)
add_xlockmore_screensaver(rubikblocks WIN32 rubikblocks.c rotator.c wgl.c)
add_xlockmore_screensaver(sballs WIN32 sballs.c wgl.c)
add_xlockmore_screensaver(sierpinski3d WIN32 sierpinski3d.c rotator.c wgl.c)
add_xlockmore_screensaver(skytentacles WIN32 skytentacles.c rotator.c normals.c wgl.c)
add_xlockmore_screensaver(sonar WIN32 sonar.c rotator.c texfont.c sonar-sim.c wgl.c)
add_xlockmore_screensaver(spheremonics WIN32 spheremonics.c normals.c rotator.c glxfonts.c wgl.c)
add_xlockmore_screensaver(sproingies WIN32 sproingiewrap.c sproingies.c s1_1.c s1_2.c s1_3.c s1_4.c s1_5.c s1_6.c s1_b.c gllist.c wgl.c)
add_xlockmore_screensaver(stairs WIN32 stairs.c glsphere.c wgl.c)
add_xlockmore_screensaver(starwars WIN32 starwars.c texfont.c glut_swidth.c glut_stroke.c wgl.c)
add_xlockmore_screensaver(stonerview WIN32 stonerview.c 
    stonerview-move.c 
    stonerview-osc.c 
    stonerview-view.c 
    wgl.c)
add_xlockmore_screensaver(superquadrics WIN32 superquadrics.c wgl.c)
add_xlockmore_screensaver(surfaces WIN32 surfaces.c rotator.c wgl.c)
add_xlockmore_screensaver(tangram WIN32 tangram.c glxfonts.c tangram_shapes.c wgl.c)
add_xlockmore_screensaver(timetunnel WIN32 timetunnel.c wgl.c)
add_xlockmore_screensaver(topblock WIN32 topblock.c glsphere.c tube.c wgl.c)
add_xlockmore_screensaver(tronbit WIN32 tronbit.c tronbit_idle1.c tronbit_idle2.c tronbit_no.c tronbit_yes.c rotator.c gllist.c wgl.c)
add_xlockmore_screensaver(unknownpleasures WIN32 unknownpleasures.c wgl.c)
add_xlockmore_screensaver(voronoi WIN32 voronoi.c wgl.c)

target_link_libraries(antinspect ${OPENGL_LIBRARIES})
target_link_libraries(antmaze ${OPENGL_LIBRARIES})
target_link_libraries(antspotlight ${OPENGL_LIBRARIES})
target_link_libraries(atlantis ${OPENGL_LIBRARIES})
target_link_libraries(atunnel ${OPENGL_LIBRARIES})
target_link_libraries(blinkbox ${OPENGL_LIBRARIES})
target_link_libraries(blocktube ${OPENGL_LIBRARIES})
target_link_libraries(boing ${OPENGL_LIBRARIES})
target_link_libraries(bouncingcow ${OPENGL_LIBRARIES})
target_link_libraries(boxed ${OPENGL_LIBRARIES})
target_link_libraries(bubble3d ${OPENGL_LIBRARIES})
target_link_libraries(cage ${OPENGL_LIBRARIES})
target_link_libraries(carousel ${OPENGL_LIBRARIES})
target_link_libraries(circuit ${OPENGL_LIBRARIES})
target_link_libraries(companion ${OPENGL_LIBRARIES})
target_link_libraries(crackberg ${OPENGL_LIBRARIES})
target_link_libraries(cube21 ${OPENGL_LIBRARIES})
target_link_libraries(cubenetic ${OPENGL_LIBRARIES})
target_link_libraries(cubestorm ${OPENGL_LIBRARIES})
target_link_libraries(cubicgrid ${OPENGL_LIBRARIES})
target_link_libraries(cubicgridclock ${OPENGL_LIBRARIES})
target_link_libraries(dangerball ${OPENGL_LIBRARIES})
target_link_libraries(dnalogo ${OPENGL_LIBRARIES})
target_link_libraries(endgame ${OPENGL_LIBRARIES})
target_link_libraries(engine ${OPENGL_LIBRARIES})
target_link_libraries(extrusion ${OPENGL_LIBRARIES} gle)
target_link_libraries(flipflop ${OPENGL_LIBRARIES})
target_link_libraries(flipscreen3d ${OPENGL_LIBRARIES})
target_link_libraries(fliptext ${OPENGL_LIBRARIES})
target_link_libraries(flurry ${OPENGL_LIBRARIES})
target_link_libraries(flyingtoasters ${OPENGL_LIBRARIES})
target_link_libraries(gears ${OPENGL_LIBRARIES})
target_link_libraries(gflux ${OPENGL_LIBRARIES})
target_link_libraries(glblur ${OPENGL_LIBRARIES})
target_link_libraries(glcells ${OPENGL_LIBRARIES})
target_link_libraries(gleidescope ${OPENGL_LIBRARIES})
target_link_libraries(glforestfire ${OPENGL_LIBRARIES})
target_link_libraries(glhanoi ${OPENGL_LIBRARIES})
target_link_libraries(glknots ${OPENGL_LIBRARIES})
target_link_libraries(glmatrix ${OPENGL_LIBRARIES})
target_link_libraries(glplanet ${OPENGL_LIBRARIES})
target_link_libraries(glschool ${OPENGL_LIBRARIES})
target_link_libraries(glslideshow ${OPENGL_LIBRARIES})
target_link_libraries(glsnake ${OPENGL_LIBRARIES})
target_link_libraries(gltext ${OPENGL_LIBRARIES})
target_link_libraries(hilbert ${OPENGL_LIBRARIES})
target_link_libraries(hypertorus ${OPENGL_LIBRARIES})
target_link_libraries(hypnowheel ${OPENGL_LIBRARIES})
target_link_libraries(jigglypuff ${OPENGL_LIBRARIES})
target_link_libraries(jigsaw ${OPENGL_LIBRARIES})
target_link_libraries(juggler3d ${OPENGL_LIBRARIES})
target_link_libraries(kaleidocycle ${OPENGL_LIBRARIES})
target_link_libraries(klein ${OPENGL_LIBRARIES})
target_link_libraries(lament ${OPENGL_LIBRARIES})
target_link_libraries(lavalite ${OPENGL_LIBRARIES})
target_link_libraries(lockward ${OPENGL_LIBRARIES})
target_link_libraries(menger ${OPENGL_LIBRARIES})
target_link_libraries(mirrorblob ${OPENGL_LIBRARIES})
target_link_libraries(moebius ${OPENGL_LIBRARIES})
target_link_libraries(moebiusgears ${OPENGL_LIBRARIES})
target_link_libraries(molecule ${OPENGL_LIBRARIES})
target_link_libraries(morph3d ${OPENGL_LIBRARIES})
target_link_libraries(noof ${OPENGL_LIBRARIES})
target_link_libraries(photopile ${OPENGL_LIBRARIES})
target_link_libraries(pinion ${OPENGL_LIBRARIES})
target_link_libraries(pipes ${OPENGL_LIBRARIES})
target_link_libraries(polyhedra ${OPENGL_LIBRARIES})
target_link_libraries(polytopes ${OPENGL_LIBRARIES})
target_link_libraries(providence ${OPENGL_LIBRARIES})
target_link_libraries(pulsar ${OPENGL_LIBRARIES})
target_link_libraries(quasicrystal ${OPENGL_LIBRARIES})
target_link_libraries(queens ${OPENGL_LIBRARIES})
target_link_libraries(rubik ${OPENGL_LIBRARIES})
target_link_libraries(rubikblocks ${OPENGL_LIBRARIES})
target_link_libraries(sballs ${OPENGL_LIBRARIES})
target_link_libraries(sierpinski3d ${OPENGL_LIBRARIES})
target_link_libraries(skytentacles ${OPENGL_LIBRARIES})
target_link_libraries(sonar ${OPENGL_LIBRARIES})
target_link_libraries(spheremonics ${OPENGL_LIBRARIES})
target_link_libraries(sproingies ${OPENGL_LIBRARIES})
target_link_libraries(stairs ${OPENGL_LIBRARIES})
target_link_libraries(starwars ${OPENGL_LIBRARIES})
target_link_libraries(stonerview ${OPENGL_LIBRARIES})
target_link_libraries(superquadrics ${OPENGL_LIBRARIES})
target_link_libraries(surfaces ${OPENGL_LIBRARIES})
target_link_libraries(tangram ${OPENGL_LIBRARIES})
target_link_libraries(timetunnel ${OPENGL_LIBRARIES})
target_link_libraries(topblock ${OPENGL_LIBRARIES})
target_link_libraries(tronbit ${OPENGL_LIBRARIES})
target_link_libraries(unknownpleasures ${OPENGL_LIBRARIES})
target_link_libraries(voronoi ${OPENGL_LIBRARIES})

target_include_directories(extrusion PRIVATE ../../gle/glextrusion/src)
