

html_HTML = 	\
  blurb.html	\
  build.html	\
  index.html	\
  join.html 	\
  texture.html	\
  tube.html	\
  vrml.html

gif_HTML = 		\
  angle.gif		\
  basic.gif		\
  candle.gif		\
  cone.gif		\
  cut.gif		\
  edge.gif		\
  edgenorm.gif		\
  edgesweep.gif		\
  endcap.gif		\
  facenorm.gif		\
  facesweep.gif		\
  facet.gif		\
  gle.jpg		\
  helix.gif		\
  helix1.gif		\
  helix2.gif		\
  helix3.gif		\
  helix4.gif		\
  helix5.gif		\
  helix6.gif		\
  helixtex.gif		\
  offround.gif		\
  ogla.gif		\
  ogla_sm.gif		\
  opencontour.gif	\
  raw.gif		\
  round.gif		\
  screw0.gif		\
  screw1.gif		\
  screw2.gif		\
  screwn.gif		\
  shear.gif		\
  texas.gif		\
  texscr.gif		\
  texscr2.gif		\
  textwi.gif		\
  textwi2.gif		\
  twist1.gif		\
  twist2.gif		\
  twist3.gif

giforig_HTML = 		\
  angle.orig.gif	\
  basic.orig.gif	\
  candle.orig.gif	\
  cone.orig.gif		\
  cut.orig.gif		\
  edge.orig.gif		\
  edgenorm.orig.gif	\
  edgesweep.orig.gif	\
  endcap.orig.gif	\
  facenorm.orig.gif	\
  facesweep.orig.gif	\
  facet.orig.gif	\
  helix3.orig.gif	\
  helix5.orig.gif	\
  helix6.orig.gif	\
  offround.orig.gif	\
  opencontour.orig.gif	\
  raw.orig.gif		\
  round.orig.gif	\
  screw0.orig.gif	\
  screw1.orig.gif	\
  screw2.orig.gif	\
  screwn.orig.gif	\
  shear.orig.gif	\
  texas.orig.gif	\
  twist1.orig.gif	\
  twist2.orig.gif	\
  twist3.orig.gif

docdir = $(datadir)/doc/gle/html

doc_DATA =  $(html_HTML) $(gif_HTML) $(giforig_HTML) README

EXTRA_DIST = .cvsignore $(doc_DATA)

SUFFIXES = .html .gif .jpg

